--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/LazorMap.LazorMap
 GameDefaultMap=/Game/Maps/LazorMap.LazorMap
-GlobalDefaultGameMode=/Game/CustomPawn/CustomGM.CustomGM_C
+GlobalDefaultGameMode=/Game/Misc/LazorGM.LazorGM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -106,5 +106,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
